<resources>
    <string name="app_name">Logic Calculator</string>

    <string name="left"><![CDATA[<-]]></string>
    <string name="right"><![CDATA[->]]></string>

    <string name="aORbTHENc">A∨B→C</string>

    <string name="izaquiel">IZAQUIEL</string>

    <string name="or">∧</string>
    <string name="and">∨</string>
    <string name="not">¬</string>
    <string name="then">→</string>

    <string name="del">DEL</string>
    <string name="validate">Validate</string>

    <string name="a">A</string>
    <string name="g">G</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="y">Y</string>
    <string name="b">B</string>
    <string name="h">H</string>
    <string name="n">N</string>
    <string name="t">T</string>
    <string name="z">Z</string>
    <string name="c">C</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="u">U</string>
    <string name="j">J</string>
    <string name="p">P</string>
    <string name="v">V</string>
    <string name="e">E</string>
    <string name="k">K</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="x">X</string>
    <string name="d">D</string>
</resources>
