<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/edittext0"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="serif"
        android:gravity="end"
        android:hint="@string/aORbTHENc"
        android:padding="15dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="@string/izaquiel"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        tools:targetApi="jelly_bean" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext0"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/buttonDEL"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:elevation="24dp"
            android:text="@string/del"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonAND"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="12dp"
            android:text="@string/and"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOR"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="12dp"
            android:text="@string/or"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonNOT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="12dp"
            android:text="@string/then"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTHEN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="12dp"
            android:text="@string/then"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonGO"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#c53d13"
            android:elevation="24dp"
            android:text="@string/validate"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edittext0"
        android:layout_toLeftOf="@+id/linearLayout"
        android:background="@color/colorAccent"
        android:layout_toStartOf="@+id/linearLayout">


        <Button
            android:id="@+id/buttonA"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:backgroundTint="@android:color/black"
            android:text="@string/a"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonG"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/g"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonM"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/m"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonS"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/s"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonY"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/y"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonB"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/b"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonH"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/h"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/n"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/t"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/buttonZ"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/z"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonC"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/c"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonI"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/i"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonO"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/o"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonU"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/u"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/d"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonJ"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/j"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonP"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/p"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonV"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/v"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonLEFT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:background="#bc5100"
            android:elevation="24dp"
            android:text="@string/left"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonE"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/e"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonK"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/k"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonQ"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/q"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonW"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/w"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonRIGTH"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:background="#bc5100"
            android:elevation="24dp"
            android:text="@string/right"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonF"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="5"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/f"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonL"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="5"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/l"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonR"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="5"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/r"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/buttonX"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="5"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"

            android:text="@string/x"
            tools:targetApi="lollipop" />


    </GridLayout>

</RelativeLayout>